
add_library(notstd INTERFACE)

set(NOTSTD_PUBLIC_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)
set(NOTSTD_PUBLIC_INCLUDE_PREFIX ${NOTSTD_PUBLIC_INCLUDE}/notstd)

target_sources(notstd
    PUBLIC
        ${NOTSTD_PUBLIC_INCLUDE_PREFIX}/Exceptions.hxx
)

list(APPEND NOTSTD_PUBLIC_HEADERS
    ${NOTSTD_PUBLIC_INCLUDE_PREFIX}/Exceptions.hxx
)

set_target_properties(notstd PROPERTIES
    PUBLIC_HEADER "${NOTSTD_PUBLIC_HEADERS}"
    INTERFACE_INCLUDE_DIRECTORIES "${NOTSTD_PUBLIC_INCLUDE}"
)
