
add_library(strings INTERFACE)

set(STRINGS_PUBLIC_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)
set(STRINGS_PUBLIC_INCLUDE_PREFIX ${STRINGS_PUBLIC_INCLUDE}/strings)

target_sources(strings
    PUBLIC
        ${STRINGS_PUBLIC_INCLUDE_PREFIX}/StringHelpers.hxx
)

list(APPEND STRINGS_PUBLIC_HEADERS
    ${STRINGS_PUBLIC_INCLUDE_PREFIX}/StringHelpers.hxx
)

set_target_properties(strings PROPERTIES
    PUBLIC_HEADER "${STRINGS_PUBLIC_HEADERS}"
    INTERFACE_INCLUDE_DIRECTORIES "${STRINGS_PUBLIC_INCLUDE}"
)
