
add_library(${PROJECT_NAME}-network-manager STATIC "")

set(NET_REMOTE_NETWORK_MANAGER_PUBLIC_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)
set(NET_REMOTE_NETWORK_MANAGER_PUBLIC_INCLUDE_SUFFIX microsoft/net)
set(NET_REMOTE_NETWORK_MANAGER_PUBLIC_INCLUDE_PREFIX ${NET_REMOTE_NETWORK_MANAGER_PUBLIC_INCLUDE}/${NET_REMOTE_NETWORK_MANAGER_PUBLIC_INCLUDE_SUFFIX})

target_sources(${PROJECT_NAME}-network-manager
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/NetworkManager.cxx
    PUBLIC
    FILE_SET HEADERS
    BASE_DIRS ${NET_REMOTE_NETWORK_MANAGER_PUBLIC_INCLUDE}
    FILES
        ${NET_REMOTE_NETWORK_MANAGER_PUBLIC_INCLUDE_PREFIX}/NetworkManager.hxx
)

target_link_libraries(${PROJECT_NAME}-network-manager
    PUBLIC
        ${PROJECT_NAME}-net
        wifi-apmanager
        wifi-core
)

install(
    TARGETS ${PROJECT_NAME}-network-manager
    EXPORT ${PROJECT_NAME}
    COMPONENT dev
    FILE_SET HEADERS
    PUBLIC_HEADER DESTINATION "${NETREMOTE_DIR_INSTALL_PUBLIC_HEADER_BASE}/${NET_REMOTE_NETWORK_MANAGER_PUBLIC_INCLUDE_SUFFIX}"
)
