
add_library(strings STATIC "")

set(STRINGS_PUBLIC_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)
set(STRINGS_PUBLIC_INCLUDE_SUFFIX strings)
set(STRINGS_PUBLIC_INCLUDE_PREFIX ${STRINGS_PUBLIC_INCLUDE}/${STRINGS_PUBLIC_INCLUDE_SUFFIX})

target_sources(strings
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/StringHelpers.cxx
    PUBLIC
    FILE_SET HEADERS
    BASE_DIRS ${STRINGS_PUBLIC_INCLUDE}
    FILES
        ${STRINGS_PUBLIC_INCLUDE_PREFIX}/StringHelpers.hxx
        ${STRINGS_PUBLIC_INCLUDE_PREFIX}/StringParsing.hxx
)

install(
    TARGETS strings
    EXPORT ${PROJECT_NAME}
    COMPONENT dev
    FILE_SET HEADERS
    PUBLIC_HEADER DESTINATION "${NETREMOTE_DIR_INSTALL_PUBLIC_HEADER_BASE}/${STRINGS_PUBLIC_INCLUDE_SUFFIX}"
)
